# grpc-java-bazel-example

./: README.md
routeguide/: .bazelignore  .gitignore  BUILD.bazel  WORKSPACE.bazel  shared_constants.bzl
routeguide/client/: BUILD.bazel
routeguide/client/src/main/java/com/encora/demo/routeguide/client/: RouteGuideClient.java
routeguide/client/src/main/java/com/encora/demo/routeguide/util/: ClientModule.java
routeguide/client/src/test/java/com/encora/demo/routeguide/client/: RouteGuideClientTest.java
routeguide/commons/: BUILD.bazel
routeguide/commons/src/main/java/com/encora/demo/routeguide/util/: RouteGuideUtil.java
routeguide/proto/: BUILD.bazel  route_guide.proto
routeguide/server/: BUILD.bazel
routeguide/server/src/main/java/com/encora/demo/routeguide/server/: RouteGuideServer.java
routeguide/server/src/main/java/com/encora/demo/routeguide/util/: ServerModule.java
routeguide/src/main/java/com/encora/demo/routeguide/: RouteGuideClient.java  RouteGuideServer.java  RouteGuideUtil.java
routeguide/src/main/java/com/encora/demo/routeguide/client/: RouteGuideClient.java
routeguide/src/main/java/com/encora/demo/routeguide/server/: RouteGuideServer.java  RouteGuideService.java
routeguide/src/main/java/com/encora/demo/routeguide/util/: RouteGuideModule.java  RouteGuideUtil.java
routeguide/src/test/java/com/encora/demo/routeguide/: RouteGuideClientTest.java  RouteGuideServerTest.java
routeguide/src/test/java/com/encora/demo/routeguide/server/: RouteGuideServerTest.java
