load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

proto_library(
    name = "route_guide_proto",
    srcs = ["src/main/proto/route_guide.proto"],
)

java_proto_library(
    name = "route_guide_java_proto",
    deps = [":route_guide_proto"],
)

java_grpc_library(
    name = "route_guide_java_grpc",
    srcs = [":route_guide_proto"],
    deps = [":route_guide_java_proto"],
)

java_library(
    name = "route_guide_library",
    testonly = 1,
    srcs = glob(
        ["src/main/java/**/*.java"],
    ),
    resources = glob(
        ["src/main/resources/**"],
    ),
    runtime_deps = [
        "@io_grpc_grpc_java//netty",
    ],
    deps = [
        ":route_guide_java_grpc",
        ":route_guide_java_proto",
        "@com_google_protobuf//:protobuf_java",
        "@com_google_protobuf//:protobuf_java_util",
        "@io_grpc_grpc_java//api",
        "@io_grpc_grpc_java//protobuf",
        "@io_grpc_grpc_java//stub",
        "@maven//:com_google_api_grpc_proto_google_common_protos",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_guice",
    ],
)

java_binary(
    name = "route_guide_client",
    testonly = 1,
    main_class = "com.encora.demo.routeguide.client.RouteGuideClient",
    runtime_deps = [
        ":route_guide_library",
    ],
)

java_binary(
    name = "route_guide_server",
    testonly = 1,
    main_class = "com.encora.demo.routeguide.server.RouteGuideServer",
    runtime_deps = [
        ":route_guide_library",
    ],
)

java_library(
    name = "route_guide_test_library",
    testonly = 1,
    srcs = glob(["src/main/java/**/*.java","src/test/java/**/*.java"]),
    runtime_deps = [
        "@io_grpc_grpc_java//netty",
    ],
    deps = [
        ":route_guide_java_grpc",
        ":route_guide_java_proto",
        "@com_google_protobuf//:protobuf_java",
        "@com_google_protobuf//:protobuf_java_util",
        "@io_grpc_grpc_java//api",
        "@io_grpc_grpc_java//protobuf",
        "@io_grpc_grpc_java//stub",
        "@io_grpc_grpc_java//testing:testing",
        "@io_grpc_grpc_java//core:inprocess",
        "@io_grpc_grpc_java//core:util",
        "@maven//:com_google_api_grpc_proto_google_common_protos",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_guice",
        "@maven//:junit_junit",
        "@maven//:org_mockito_mockito_core",
    ],
)

java_test(
    name = "route_guide_client_tests",
    testonly = 1,
    test_class = "com.encora.demo.routeguide.client.RouteGuideClientTest",
    runtime_deps = [
        ":route_guide_test_library",
    ],
)

java_test(
    name = "route_guide_server_tests",
    testonly = 1,
    test_class = "com.encora.demo.routeguide.server.RouteGuideServerTest",
    runtime_deps = [
        ":route_guide_test_library",
    ],
)